# Techsaletool_v2

./: .gitignore  .taurignore  08.SECURITY.MD  E2E_TEST_PLAN.md  README.md  Spreadsheet.compiled.js  applet_refactor.cjs  babel_check.cjs  bracket_check.cjs  check-closing-tags.js  check_pkg.cjs  check_root.cjs  check_vite.cjs  compare.cjs  copy-main.js  copy_src.cjs  decompile.cjs  exportExcelHandler.ts  find-head.js  find-string.js  find_first.cjs  fix-path.cjs  fix-ts.cjs  fix_tree.js  graphic.md  index.html  main.rs  metadata.json  out.txt  package-lock.json  package.json  playwright.config.ts  print-bytes.js  print-dist-bytes.js  print-top.js  recover_script.cjs  refactor-script.ts  refactor.js  refactor.ts  refactor3.js  (+27 more)
app/applet/: compare.js  compare.mjs  test-formula.js
e2e-native/: collab.mjs  collab_l4.mjs  collab_swarm.mjs  dbg.mjs  findexedir.mjs  probe.mjs  probe2.mjs  sess.json  smoke.mjs  verify_defect10.mjs  verify_defect5.mjs  verify_defect9.mjs
l2_tests/: Cargo.toml
l2_tests/src/: lib.rs
src/: App.tsx  data.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sync_core.rs
src/components/: AssigneeDashboard.tsx  BoardPage.tsx  CEDashboard.tsx  ChangelogViewer.tsx  ConflictModal.tsx  DraggableModal.tsx  ErrorBoundary.tsx  NavBar.tsx  SettingsPage.tsx  Sidebar.tsx  Spreadsheet.tsx  StatsCards.tsx  TimelineConfigModal.tsx  TimelineDashboard.tsx
src/lib/: isTauri.ts  mergeEngine.ts  richText.ts
tests/e2e/: 01-app-launch.spec.ts  02-tab-navigation.spec.ts  03-spreadsheet.spec.ts  04-data-persistence.spec.ts  05-dashboard-widgets.spec.ts  06-settings.spec.ts  07-rich-text-format.spec.ts  _docs-capture.spec.ts  global-setup.ts
tests/perf/: mergeBench.ts
tests/unit/: mergeEngine.test.ts  (+1 more)
